--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body {
 .basic-container {
   padding: 30px;
   padding-bottom: 30px;
+  color: bisque;
 }
 .version-info {
   font-size: 8pt;
@@ -19,6 +20,7 @@ body {
 .example-card {
   padding: bottom 20px;
   margin-bottom: 20px;
+  color: bisque;
 }
 
 .result {
@@ -28,6 +30,10 @@ body {
 
 .searchBar {
   display: block;
+}
+
+.highlightText {
+  background: rgb(119, 163, 216);
 }
 html,
 body {
